--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-markdown": "^8.0.5",
     "zod": "^3.21.4",
     "zustand": "^4.3.6"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "@tauri-apps/cli": "^1.2.2",
     "@types/node": "^18.7.10",
     "@types/react": "^18.0.15",
