--- a/package.json
+++ b/package.json
@@ -1,35 +1,12 @@
 {
-  "name": "macgpt",
+  "name": "mono",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "tauri": "tauri"
+    "dev": "turbo dev",
+    "build": "turbo build",
+    "preview": "turbo preview"
   },
   "dependencies": {
-    "@tauri-apps/api": "^1.2.0",
-    "daisyui": "^2.51.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0",
-    "react-markdown": "^8.0.5",
-    "zod": "^3.21.4",
-    "zustand": "^4.3.6"
-  },
-  "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9",
-    "@tauri-apps/cli": "^1.2.2",
-    "@types/node": "^18.7.10",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
-    "@vitejs/plugin-react": "^3.0.0",
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7",
-    "typescript": "^4.6.4",
-    "vite": "^4.0.0"
+    "turbo": "^1.8.3"
   }
 }
