--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,9 @@ name: "publish"
 on:
   push:
     branches:
-      - main
-
+      - "releases/**"
+    paths:
+      - "package.json"
 jobs:
   create-release:
     permissions:
