--- a/landing/package.json
+++ b/landing/package.json
@@ -10,7 +10,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@mdx-js/loader": "^2.3.0",
+    "@next/mdx": "^13.2.3",
     "@prisma/client": "^4.9.0",
+    "@tailwindcss/typography": "^0.5.9",
     "@tanstack/react-query": "^4.20.2",
     "@trpc/client": "^10.9.0",
     "@trpc/next": "^10.9.0",
@@ -21,6 +24,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.9.1",
+    "webpack": "^5.75.0",
     "zod": "^3.20.6"
   },
   "devDependencies": {
