--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-markdown": "^8.0.5",
+    "tauri-plugin-positioner-api": "github:tauri-apps/tauri-plugin-positioner",
     "zod": "^3.21.4",
     "zustand": "^4.3.6"
   },
