--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,6 +67,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
+          args: --target universal-apple-darwin
           releaseId: ${{ needs.create-release.outputs.release_id }}
 
   publish-release:
