--- a/landing/package.json
+++ b/landing/package.json
@@ -10,7 +10,6 @@
     "start": "next start"
   },
   "dependencies": {
-    "deskgpt-app":"*",
     "@mdx-js/loader": "^2.3.0",
     "@next/mdx": "^13.2.3",
     "@prisma/client": "^4.9.0",
@@ -21,9 +20,11 @@
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
     "daisyui": "^2.51.3",
+    "deskgpt-app": "*",
     "next": "^13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "superjson": "1.9.1",
     "webpack": "^5.75.0",
     "zod": "^3.20.6"
