--- a/landing/package.json
+++ b/landing/package.json
@@ -19,9 +19,10 @@
     "@trpc/next": "^10.9.0",
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
+    "@vercel/edge-config": "^0.1.1",
     "daisyui": "^2.51.3",
-    "quickgpt-app": "*",
     "next": "^13.2.1",
+    "quickgpt-app": "*",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
