--- a/app/src-tauri/Cargo.toml
+++ b/app/src-tauri/Cargo.toml
@@ -16,7 +16,8 @@ tauri-build = { version = "1.2", features = [] }
 tauri = { version = "1.2", features = ["global-shortcut-all", "macos-private-api", "shell-open", "system-tray", "updater"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tauri-plugin-positioner = { version = "1.0.4", features = ["system-tray"] }
+objc = "0.2.7"
+cocoa = "0.24.1"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
