--- a/app/src-tauri/Cargo.toml
+++ b/app/src-tauri/Cargo.toml
@@ -13,9 +13,17 @@ edition = "2021"
 tauri-build = { version = "1.2", features = [] }
 
 [dependencies]
-tauri = { version = "1.2", features = ["global-shortcut-all", "macos-private-api", "shell-open", "system-tray", "updater"] }
+tauri = { version = "1.2", features = [
+    "global-shortcut-all",
+    "macos-private-api",
+    "shell-open",
+    "system-tray",
+    "updater",
+] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+
+[target.'cfg(target_os = "macos")'.dependencies]
 objc = "0.2.7"
 cocoa = "0.24.1"
 
