--- a/app/src-tauri/Cargo.toml
+++ b/app/src-tauri/Cargo.toml
@@ -13,13 +13,7 @@ edition = "2021"
 tauri-build = { version = "1.2", features = [] }
 
 [dependencies]
-tauri = { version = "1.2", features = [
-    "global-shortcut-all",
-    "macos-private-api",
-    "shell-open",
-    "system-tray",
-    "updater",
-] }
+tauri = { version = "1.2", features = ["global-shortcut-all", "macos-private-api", "shell-open", "system-tray", "updater"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
