--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-markdown": "^8.0.5",
+    "remark-gfm": "^3.0.1",
     "zod": "^3.21.4",
     "zustand": "^4.3.6"
   },
