--- a/landing/package.json
+++ b/landing/package.json
@@ -27,6 +27,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "remark-gfm": "^3.0.1",
     "superjson": "1.9.1",
     "webpack": "^5.75.0",
     "zod": "^3.21.4"
